@@ -8,6 +8,7 @@ Bug fixes:
 Enhancements:
 - #7183 Refactoring for Synergy 3 licenses
 - #7190 Maintenance license serial key support
+- #7193 Support for maintenance licenses in China
 
 1.14.4
 ======
